--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
              -->
             <form>
                 <input type="radio" ng-model="projection" ng-change="projectionChange()" value="parallel">Parallel
-                <input type="radio" ng-model="projection" ng-change="projectionChange()" value="cabinet">Cabinet
+                <input type="radio" ng-model="projection" ng-change="projectionChange()" value="oblique">Oblique
                 <input type="radio" ng-model="projection" ng-change="projectionChange()" value="prespctive">Prespctive
             </form>
 
